<resources>

    <!-- APP NAME -->

    <string name="app_name">Proximity Band</string>

    <!-- CONNECTION -->

    <string name="bluetooth_connection">Bluetooth LE Device</string>
    <string name="connect">Connect</string>
    <string name="connected">connected to</string>
    <string name="connecting">connecting to</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">disconnected</string>
    <string name="disconnecting">disconnecting from</string>
    <string name="scanning">Scanning for BLE devices&#8230;</string>

    <!-- LABELS -->

    <string name="threshold">Threshold:</string>
    <string name="filtering">Filtering:</string>
    <string name="delay">Delay:</string>

    <string name="status">Status: </string>

    <string name="signal_strength">Signal Strength:</string>

    <string name="db">db</string>
    <string name="percent">%</string>
    <string name="seconds">s</string>

    <string name="connection_time">Connection time:</string>
    <string name="notification_groups">Notification Groups</string>
    <string name="notification_reminder">Reminder</string>
    <string name="alarm_dialog_title">ALARM!</string>

    <string name="alarm_dialog_message_out_of_range">The Proximity Band is out of range!</string>
    <string name="alarm_dialog_message_lost_connection">Lost connection to the Proximity Band!</string>

    <string name="pick_red_notification_group">Pick Red Notification Group</string>
    <string name="pick_green_notification_group">Pick Green Notification Group</string>
    <string name="pick_blue_notification_group">Pick Blue Notification Group</string>

    <!-- BUTTON LABELS -->

    <string name="button_action">Button Action</string>
    <string name="demo_action">Demo Action</string>
    <string name="set">Set</string>

    <!-- ARRAYS -->

    <string-array name="none_ble_devices">
        <item>None</item>
    </string-array>

    <string-array name="button_actions">
        <item>Toggle vibration</item>
        <item>Beep phone</item>
        <item>Test alarm</item>
        <item>None</item>
    </string-array>

    <string-array name="demo_actions">
        <item>Short vibration</item>
        <item>Medium vibration</item>
        <item>Long vibration</item>

        <item>Red LED On</item>
        <item>Green LED On</item>
        <item>Blue LED On</item>

        <item>Red LED Off</item>
        <item>Green LED Off</item>
        <item>Blue LED Off</item>

        <item>Red LED Flash On</item>
        <item>Green LED Flash On</item>
        <item>Blue LED Flash On</item>

        <item>Red LED Flash Off</item>
        <item>Green LED Flash Off</item>
        <item>Blue LED Flash Off</item>

        <item>All LEDs On</item>
        <item>All LEDs Off</item>

        <item>Alarm On</item>
        <item>Alarm Off</item>

    </string-array>

    <string-array name="reminder_times">
        <item>None</item>
        <item>1s</item>
        <item>3s</item>
        <item>5s</item>
        <item>30s</item>
        <item>1m</item>
        <item>5m</item>
        <item>15m</item>
        <item>30m</item>
        <item>1h</item>
    </string-array>

    <integer-array name="reminder_times_values">
        <item>0</item>
        <item>1000</item>
        <item>3000</item>
        <item>5000</item>
        <item>30000</item>
        <item>60000</item>
        <item>300000</item>
        <item>900000</item>
        <item>1800000</item>
        <item>3600000</item>
    </integer-array>

</resources>
