<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.queensu.apsc_100_mod_3_group_h.proximityband.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_height="match_parent"
        android:id="@+id/topLayout"
        android:background="@drawable/parameter_view_border"
        android:layout_above="@+id/bottomLayout"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rssiValueGraph"
            android:layout_marginBottom="75dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="25dp" />

        <TextView
            android:text="@string/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/connectionStatusTextView"
            android:layout_marginTop="15dp" />

        <TextView
            android:text="@string/connection_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/connectionTimeLabelTextView"
            android:layout_marginBottom="15dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp" />

        <TextView
            android:text="---"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/connectionTimeTextView"
            android:textColor="@color/colorRangeText"
            android:textStyle="normal|bold"
            android:maxLines="1"
            android:minLines="1"
            android:textAlignment="textEnd"
            android:textSize="30dp"
            android:layout_alignBottom="@+id/connectionTimeLabelTextView"
            android:layout_alignEnd="@+id/rssiValueGraph"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="-10dp"
            android:gravity="end" />

        <TextView
            android:text="@string/signal_strength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rssiValueLabelTextView"
            android:layout_above="@+id/connectionTimeTextView"
            android:layout_alignStart="@+id/connectionTimeLabelTextView"
            android:layout_marginBottom="5dp" />

        <TextView
            android:text="---"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rssiValueTextView"
            android:textColor="@color/colorRangeText"
            android:textStyle="normal|bold"
            android:maxLines="1"
            android:minLines="1"
            android:textAlignment="textEnd"
            android:textSize="30dp"
            android:layout_above="@+id/connectionTimeLabelTextView"
            android:layout_alignEnd="@+id/rssiValueGraph"
            android:layout_marginBottom="5dp"
            android:gravity="end"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomLayout"
        android:background="@drawable/parameter_view_border"
        android:paddingBottom="25dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <!-- DEVICE SELECTION -->

        <TextView
            android:text="@string/bluetooth_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:id="@+id/bluetoothConenctionTextView"
            android:layout_alignStart="@+id/bluetoothDeviceSelectionSpinner" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/bluetoothDeviceSelectionSpinner"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toStartOf="@+id/connectionButton"
            android:layout_below="@+id/bluetoothConenctionTextView"
            android:foreground="@drawable/parameter_view_border"
            android:entries="@array/test_ble_devices"
            android:fadeScrollbars="true"
/>

        <Button
            android:text="@string/connect"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/connectionButton"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/bluetoothDeviceSelectionSpinner"
            android:layout_marginRight="10dp"
            android:foreground="@drawable/parameter_view_border"
            android:background="@drawable/button_background"
            android:onClick="onSetBluetoothDeviceClicked" />

        <!-- THRESHOLD -->

        <TextView
            android:text="@string/threshold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/senstitivityTextView"
            android:layout_below="@+id/bluetoothDeviceSelectionSpinner"
            android:layout_alignStart="@+id/bluetoothDeviceSelectionSpinner"
            android:layout_marginTop="15dp" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/thresholdSeekBar"
            android:layout_alignEnd="@+id/setButtonActionButton"
            android:layout_below="@+id/senstitivityTextView"
            android:layout_alignStart="@+id/senstitivityTextView"
            android:progress="80" />

        <TextView
            android:text="xx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/thresholdValueTextView"
            android:layout_alignBaseline="@+id/senstitivityTextView"
            android:layout_alignBottom="@+id/senstitivityTextView"
            android:layout_alignEnd="@+id/bluetoothConenctionTextView"
            android:layout_toEndOf="@+id/senstitivityTextView"
            android:layout_marginLeft="5dp" />

        <!-- FILTERING -->

        <TextView
            android:text="@string/filtering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/filteringTextView"
            android:layout_below="@+id/thresholdSeekBar"
            android:layout_alignStart="@+id/thresholdSeekBar"
            android:layout_marginTop="15dp" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/filteringSeekBar"
            android:layout_alignEnd="@+id/setButtonActionButton"
            android:layout_below="@+id/filteringTextView"
            android:layout_alignStart="@+id/filteringTextView"
            android:progress="50" />

        <TextView
            android:text="xx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/filteringValueTextView"
            android:layout_alignBaseline="@+id/filteringTextView"
            android:layout_alignBottom="@+id/filteringTextView"
            android:layout_alignEnd="@+id/filteringSeekBar"
            android:layout_toEndOf="@+id/filteringTextView"
            android:layout_marginLeft="5dp" />

        <!-- DEMO ACTION -->

        <TextView
            android:text="@string/demo_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonActionTextView"
            android:layout_below="@+id/filteringSeekBar"
            android:layout_marginTop="15dp"
            android:layout_alignStart="@+id/thresholdSeekBar" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/buttonActionSelectionSpinner"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignTop="@+id/setButtonActionButton"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/setButtonActionButton"
            android:foreground="@drawable/parameter_view_border"
            android:entries="@array/demo_actions"
            android:gravity="center_vertical|start" />

        <Button
            android:text="@string/set"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/setButtonActionButton"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/buttonActionTextView"
            android:layout_alignStart="@+id/connectionButton"
            android:onClick="onSetButtonActionClicked"
            android:foreground="@drawable/parameter_view_border"
            android:background="@drawable/button_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="false"
            android:layout_below="@+id/buttonActionSelectionSpinner"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="fill_horizontal">

            <com.queensu.apsc_100_mod_3_group_h.proximityband.MultiSelectionSpinner
                android:id="@+id/redNotificationGroupMultiSelectionSpinner"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorRed"
                android:spinnerMode="dialog"
                android:hint="Red Notification Group">
            </com.queensu.apsc_100_mod_3_group_h.proximityband.MultiSelectionSpinner>

            <com.queensu.apsc_100_mod_3_group_h.proximityband.MultiSelectionSpinner
                android:id="@+id/greenNotificationGroupMultiSelectionSpinner"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorGreen">
            </com.queensu.apsc_100_mod_3_group_h.proximityband.MultiSelectionSpinner>

            <com.queensu.apsc_100_mod_3_group_h.proximityband.MultiSelectionSpinner
                android:id="@+id/blueNotificationGroupMultiSelectionSpinner"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorBlue">
            </com.queensu.apsc_100_mod_3_group_h.proximityband.MultiSelectionSpinner>

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>
